fix: [PIE-3917]: adjust font size for overflowing text (#9283)

--- a/src/modules/75-cd/components/PipelineStudio/DeployServiceSpecifications/DeployServiceSpecifications.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployServiceSpecifications/DeployServiceSpecifications.module.scss
@@ -113,3 +113,7 @@
   font-size: 13px;
   padding: 4px 8px;
 }
+
+.currentGenSupported {
+  font-size: 13px !important;
+}
